--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     // viewModels:
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation 'androidx.activity:activity-ktx:1.2.0'
+    implementation 'androidx.activity:activity-ktx:1.2.1'
+    // authentication:
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    // Declare the dependency for the Firebase Authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
