--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     // Declare the dependency for the Firebase Authentication
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Material UI
+    implementation 'com.google.android.material:material:1.3.0'
 }
