--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gardengatherer">
+    package="com.WSM1120464.gardengatherer">
 
     <application
         android:allowBackup="true"
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GardenGatherer">
-        <activity android:name=".GardenActivity"></activity>
-        <activity android:name=".SignInActivity">
+        <activity android:name="com.WSM1120464.gardengatherer.GardenInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlantInfoActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.WSM1120464.gardengatherer.SignInActivity">
+
+        </activity>
+        <activity android:name="com.WSM1120464.gardengatherer.PlantInfoActivity">
+
+        </activity>
+        <activity android:name="com.WSM1120464.gardengatherer.MainActivity" />
     </application>
 
 </manifest>
