Made adjustments to save garden and save plant, fixed some issues for the recycler view's click events caused by a card view within a constraint layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GardenGatherer">
-        <activity android:name=".PlantsActivity"></activity>
-        <activity android:name=".GardenSaveActivity"></activity>
-        <activity android:name=".SignInActivity"></activity>
-        <activity android:name=".PlantSaveActivity">
-
-        </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".PlantsActivity" />
+        <activity android:name=".GardenSaveActivity" />
+        <activity android:name=".SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PlantSaveActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
