Updated app to only show the gardens saved by the user logged in. The plants only load for each garden, so they don't use the userID yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GardenGatherer">
+        <activity android:name=".IndividualPlantActivity"></activity>
         <activity android:name=".PlantsActivity" />
         <activity android:name=".GardenSaveActivity" />
         <activity android:name=".SignInActivity">
