Working on including the back option in the action bar instead of as extended FAB buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GardenGatherer">
-        <activity android:name=".IndividualPlantActivity"></activity>
-        <activity android:name=".PlantsActivity" />
-        <activity android:name=".GardenSaveActivity" />
+
+        <activity android:name=".IndividualPlantActivity"/>
+
+        <activity android:name=".PlantsActivity"/>
+
+        <activity android:name=".GardenSaveActivity"/>
         <activity android:name=".SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +22,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlantSaveActivity" />
+
+        <activity android:name=".PlantSaveActivity"/>
         <activity android:name=".MainActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
